--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Blabber</h1>
+    <h1>Health Tracker React</h1>
+    <div id="app"></div>
+    <script src='bundle.js'></script>
   </body>
 </html>
